<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="permissionText">The app needs a permission to access your phone functions, because the app has to show
        you your device IMEI
    </string>
    <string name="permissionTextCamera">The app needs a permission to make a photo</string>
    <string name="permissionTitle">Explanation</string>
    <string name="noPermission">No permission</string>
    <string name="version">Version:</string>
    <string name="IMEI">Device IMEI:</string>
    <string name="text_profile">Profile</string>
    <string name="text_empty">Empty</string>
    <string name="text_news">News</string>
    <string name="text_logout">Logout</string>
    <string name="description_telephone">Phone</string>
    <string name="description_email">Email</string>
    <string name="description_photo">Photo</string>
    <string name="text_view_name">Name</string>
    <string name="text_view_surname">Surname</string>
    <string name="text_view_phone">Your phone</string>
    <string name="text_view_email">Your email</string>
    <string name="text_view_password">Your password</string>
    <string name="button_edit">Edit</string>
    <string name="button_ok">OK</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="about">About</string>
    <string name="greeting">Hello, new user :)</string>
    <string name="noConnection">No internet connection</string>
    <string name="incorrectRSS">"RSS url is incorrect"</string>
    <string name="selectedUrl">selectedUrl</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
