<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:hint="@string/text_view_name"
                android:inputType="text"/>

        <EditText
                android:id="@+id/surnameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:hint="@string/text_view_surname"
                android:inputType="text"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:layout_marginStart="12dp">

            <ImageView
                    android:id="@+id/ivContactItemPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_phone_blue"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/description_telephone"/>

            <EditText
                    android:id="@+id/phoneEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivContactItemPhone"
                    android:layout_marginStart="12dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121"
                    android:hint="@string/text_view_phone"
                    android:maxLength="13"
                    android:inputType="phone"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:focusable="true">

            <ImageView
                    android:id="@+id/ivContactItemEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_email_blue"
                    android:contentDescription="@string/description_email"
                    android:padding="12dp"/>

            <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivContactItemEmail"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121"
                    android:layout_marginStart="12dp"
                    android:hint="@string/text_view_email"
                    android:inputType="textEmailAddress"/>

        </RelativeLayout>

        <Button
                android:id="@+id/ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_ok"
                android:onClick="newProfile"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>