<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/avatar"
                    android:id="@+id/avatar"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    android:contentDescription="@string/description_photo"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ViewSwitcher
                android:id="@+id/profile_switcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#212121"
                        android:padding="10dp"/>

                <TextView
                        android:id="@+id/surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#212121"
                        android:padding="10dp"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:padding="12dp">

                    <ImageView
                            android:id="@+id/ivContactItemPhone1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_phone_blue"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@string/description_telephone"/>

                    <TextView
                            android:id="@+id/phoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ivContactItemPhone1"
                            android:layout_marginStart="12dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#212121" />

                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true">

                    <ImageView
                            android:id="@+id/ivContactItemEmail1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_email_blue"
                            android:contentDescription="@string/description_email"
                            android:padding="12dp"/>

                    <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ivContactItemEmail1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#212121"
                            android:padding="12dp"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <EditText
                        android:id="@+id/nameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#212121"
                        android:hint="@string/text_view_name"
                        android:inputType="text"/>

                <EditText
                        android:id="@+id/surnameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#212121"
                        android:hint="@string/text_view_surname"
                        android:inputType="text"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:layout_marginStart="12dp">

                    <ImageView
                            android:id="@+id/ivContactItemPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_phone_blue"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@string/description_telephone"/>

                    <EditText
                            android:id="@+id/phoneEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ivContactItemPhone"
                            android:layout_marginStart="12dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#212121"
                            android:hint="@string/text_view_phone"
                            android:maxLength="13"
                            android:inputType="phone"/>

                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true">

                    <ImageView
                            android:id="@+id/ivContactItemEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_email_blue"
                            android:contentDescription="@string/description_email"
                            android:padding="12dp"/>

                    <EditText
                            android:id="@+id/emailEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ivContactItemEmail"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#212121"
                            android:layout_marginStart="12dp"
                            android:hint="@string/text_view_email"
                            android:inputType="textEmailAddress"/>

                </RelativeLayout>

            </LinearLayout>

        </ViewSwitcher>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_edit_black_24dp"
            android:backgroundTint="#87CEEB"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>